Update about page
Included details for disclosure policy, namely the Amazon affiliate relationship and Google Adsense

--- a/about/index.html
+++ b/about/index.html
@@ -67,39 +67,19 @@
 <p>If you’ve ever had bed bugs, you know just how hellish that experience is. Never being able to have that good night’s rest knowing they’re going to be sucking your blood and giving you more bites. Not even a day nap feels comfortable. Bed bugs destroy your quality of life. Those of us who have ever had to deal with bed bugs I absolutely commend you as a survivor.</p>
 
 <h2 id="google-analytics">Google Analytics</h2>
-<p>We use Google Analytics on this site to understand site performance. This helps us improve content for our readers.</p>
+<p>We use Google Analytics on this site to understand site performance and how readers engage with our content.</p>
 
-<!-- ## Disclosure
-This site primarily generates income through affiliate programs and Google Adsense (advertisements). 
+<h2 id="disclosure-policy">Disclosure Policy</h2>
+<p>This site primarily generates income through Amazon’s affiliate program and Google Adsense (Google advertisements). If you click an affiliate link or ad banner and buy the product, you help support this website’s maintenance costs. We chose Amazon due to its trustworthiness and reputation in the eCommerce space.</p>
 
-I make money on this website through affiliate programs. If you click an affiliate link or ad banner and buy the product, you help support this website because I’ll get a percentage of that sale.
+<p>What we promise:</p>
 
-Currently I’m an affiliate for Amazon and Google Adsense.
-
-What this means for you:
-
-I became an affiliate to earn revenue towards the costs of running and maintaining this website. Where I have direct control over which ads are served on this website I offer only products that are directly related to the topic of this website and products that a reader/subscriber would have a genuine interest in or need of.
-I do not and will not recommend a product just for the sake of making money.
-I do not let the compensation I receive influence the content, topics, posts, or opinions expressed on this website.
-I respect and value my readers too much to write anything other than my own genuine and objective opinions and advice.
-Just like this website, my Disclosure Policy is a work in progress. As the revenue streams evolve, so will this page.
-
-(Story Outline)
-- How did you get bed bugs / how do you suspect you did?
-- How did you know it was bed bugs?
-- What were key things you did once you discovered them?
-- What was life like during the infestation?
-- How did you ultimately get rid of them?
-
-Reflecting 
-- What were some things you learned during this ordeal? Did you try a product that didn't work, etc.
-- Anything you'd do differently?
-- What is your #1 tip for those dealing with bed bugs?
-
-Logistics
-- What is your email?
-- May our admins contact you if we have follow up clarifications?
--->
+<ul>
+  <li>We’ll only offer affiliate products that are relevant to the topic, bed bugs!</li>
+  <li>We will not recommend a product just for the sake of money, as bed bugs require the best products - not the ones that pay people to push them more.</li>
+  <li>We will not let the compensation received influence the content or opinions expressed here.</li>
+  <li>Just like our blog, this disclosure policy is a work in progress. As the revenue streams evolve, so will our policy disclosure.</li>
+</ul>
 
     
     </div><div class="container">
