--- a/resources.html
+++ b/resources.html
@@ -37,15 +37,36 @@
 
       <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
         <a class="navbar-brand col-lg-3 me-0 blog-header-logo" href="/">Bed Bug Survivors</a>
-        <ul class="navbar-nav col-lg-6 justify-content-lg-center">
+        <!-- <ul class="navbar-nav col-lg-6 justify-content-lg-center">
           
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/about/" >About</a>
           </li>
           
         </ul>
+        -->
+        <ul class="navbar-nav col-lg-6 justify-content-lg-center">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/about">About</a>
+          </li>
+          <!-- 
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Bed Bug Resources
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Bed Bug Pictures and FAQ</a></li>
+              <li><a class="dropdown-item" href="#">Bed Bug Protection and Detection</a></li>
+              <li><a class="dropdown-item" href="#">Get Rid of Bed Bugs</a></li>
+            </ul>
+          </li>
+        -->
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="https://bedbugsurvivors.printify.me/products" target="_blank">Store</a>
+          </li>
+        </ul>    
         <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-          <a class="btn btn-outline-light" href="https://forms.gle/ZYF2ttxiucZQa6xW9" target="_blank">Share Your Story</a>
+          <a class="btn btn-light btn-sm" href="https://forms.gle/ZYF2ttxiucZQa6xW9" target="_blank">Share Your Story</a>
         </div>
       </div>
     </div>
@@ -101,7 +122,6 @@
       <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
     </ul>
   </div>
-</div><script src="/assets/js/bootstrap.min.js"></script>
-
+</div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
