--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>Bed Bug Survivors | About - Bed Bug Survivors</title>
+    <title>Contact - Bed Bug Survivors</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/assets/css/main.css">
@@ -68,46 +68,32 @@
   </nav>
 </div><main class="flex-grow-1">
       <div class="container">
-        	<div class="row justify-content-center">
-	    
-	    <div class="col-md-8">
-			<h1 class="text-center">About</h1>
-<p> </p>
+        <section class="bg-dark py-5 text-center text-light">
+  <div class="container">
+    <h1 class="display-5 fw-bold">Get in Touch</h1>
+    <p class="lead text-muted mb-0">
+      Questions? Comments? Bed bug horror stories? We’d love to hear from you.
+    </p>
+  </div>
+</section>
 
-<h2 id="about-bed-bug-survivors">About Bed Bug Survivors</h2>
-
-<p>Bed Bug Survivors is dedicated to sharing the human experience of dealing with bed bug infestations. Our goal is to spread knowledge, awareness, and support for those who have encountered these relentless pests.</p>
-
-<h2 id="our-story">Our Story</h2>
-
-<p>The inspiration for this site comes from my own personal battle with bed bugs. It all started when I unknowingly brought them into my tiny studio apartment by purchasing a used futon from Craigslist. What followed was an exhausting struggle that affected not just my home, but also my mental well-being. Even after eliminating the infestation, the psychological toll lingered. Over a decade later, this site serves as my way of fighting back—by educating others and providing a platform for survivors to share their stories.</p>
-
-<h2 id="how-we-use-google-analytics">How We Use Google Analytics</h2>
-
-<p>We use Google Analytics to track site performance and better understand how readers engage with our content. This helps us improve our articles, navigation, and overall user experience.</p>
-
-<h2 id="disclosure-policy">Disclosure Policy</h2>
-
-<p>Bed Bug Survivors generates revenue through affiliate marketing and advertisements, including:</p>
-<ul>
-  <li><strong>Amazon Associates Program</strong> – We may earn commissions on qualifying purchases made through Amazon links.</li>
-  <li><strong>Google Adsense</strong> – Advertisements placed throughout the site.</li>
-  <li><strong>Printify Store</strong> – A print-on-demand store offering related merchandise.</li>
-</ul>
-
-<h2 id="our-commitment-to-transparency">Our Commitment to Transparency</h2>
-<ul>
-  <li>We only promote products that are relevant to bed bug prevention, treatment, or awareness.</li>
-  <li>We will never recommend a product solely for financial gain—bed bug solutions must be effective, not just profitable.</li>
-  <li>Compensation does not influence the content, reviews, or opinions expressed on this site.</li>
-</ul>
-
-<p>Just like our blog, this disclosure policy will evolve as our revenue sources expand. We remain committed to honesty, transparency, and providing valuable information to our readers.</p>
-
-
-		</div>
-		
-	</div>
+<section class="py-5">
+  <div class="container d-flex justify-content-center">
+    <div class="col-md-8 col-lg-6">
+      <div class="card shadow-lg p-4 border-0 text-center bg-dark text-light">
+        <h2 class="h4 mb-4">Email Us</h2>
+        <p>
+          📧 <strong>bedbugsurvivorstories [at] gmail [dot] com</strong><br />
+          <small class="text-muted d-block">(Replace [at] with @ and [dot] with .)</small>
+        </p>
+        <hr class="border-secondary" />
+        <p class="text-muted mb-0">
+          We usually respond within 1–2 business days.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
       </div>
     </main><div class="container">
