--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>Bed Bug Survivors | About - Bed Bug Survivors</title>
+    <title>Privacy Policy - Bed Bug Survivors</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/assets/css/main.css">
@@ -68,46 +68,48 @@
   </nav>
 </div><main class="flex-grow-1">
       <div class="container">
-        	<div class="row justify-content-center">
-	    
-	    <div class="col-md-8">
-			<h1 class="text-center">About</h1>
-<p> </p>
-
-<h2 id="about-bed-bug-survivors">About Bed Bug Survivors</h2>
-
-<p>Bed Bug Survivors is dedicated to sharing the human experience of dealing with bed bug infestations. Our goal is to spread knowledge, awareness, and support for those who have encountered these relentless pests.</p>
-
-<h2 id="our-story">Our Story</h2>
-
-<p>The inspiration for this site comes from my own personal battle with bed bugs. It all started when I unknowingly brought them into my tiny studio apartment by purchasing a used futon from Craigslist. What followed was an exhausting struggle that affected not just my home, but also my mental well-being. Even after eliminating the infestation, the psychological toll lingered. Over a decade later, this site serves as my way of fighting back—by educating others and providing a platform for survivors to share their stories.</p>
-
-<h2 id="how-we-use-google-analytics">How We Use Google Analytics</h2>
-
-<p>We use Google Analytics to track site performance and better understand how readers engage with our content. This helps us improve our articles, navigation, and overall user experience.</p>
-
-<h2 id="disclosure-policy">Disclosure Policy</h2>
-
-<p>Bed Bug Survivors generates revenue through affiliate marketing and advertisements, including:</p>
-<ul>
-  <li><strong>Amazon Associates Program</strong> – We may earn commissions on qualifying purchases made through Amazon links.</li>
-  <li><strong>Google Adsense</strong> – Advertisements placed throughout the site.</li>
-  <li><strong>Printify Store</strong> – A print-on-demand store offering related merchandise.</li>
-</ul>
-
-<h2 id="our-commitment-to-transparency">Our Commitment to Transparency</h2>
-<ul>
-  <li>We only promote products that are relevant to bed bug prevention, treatment, or awareness.</li>
-  <li>We will never recommend a product solely for financial gain—bed bug solutions must be effective, not just profitable.</li>
-  <li>Compensation does not influence the content, reviews, or opinions expressed on this site.</li>
-</ul>
-
-<p>Just like our blog, this disclosure policy will evolve as our revenue sources expand. We remain committed to honesty, transparency, and providing valuable information to our readers.</p>
+        <section class="bg-dark text-light py-5">
 
 
-		</div>
-		
-	</div>
+  <div class="container">
+    <h1 class="display-5 fw-bold mb-4 text-center">Privacy Policy</h1>
+    <p class="lead text-muted text-center mb-5">
+      Your privacy matters. Here's how we collect, use, and protect your data.
+    </p>
+    <div class="mx-auto" style="max-width: 800px;">
+      <h2 class="h5 text-light">1. What We Collect</h2>
+      <p class="text-muted">
+        We collect anonymous data about how visitors use this site, such as pages viewed,
+        browser type, and referral source. No personal information is collected unless
+        you explicitly provide it (e.g. by emailing us).
+      </p>
+      <h2 class="h5 text-light mt-4">2. Cookies</h2>
+      <p class="text-muted">
+        This site may use cookies to enhance your experience and track usage patterns.
+        These cookies do not store personal data and are used solely for analytics and ad personalization.
+      </p>
+      <h2 class="h5 text-light mt-4">3. Third-Party Services</h2>
+      <p class="text-muted">
+        We use third-party services such as:
+      </p>
+      <ul class="text-muted">
+        <li>Google Analytics – for site usage data</li>
+        <li>Google AdSense – to display relevant ads</li>
+      </ul>
+      <p class="text-muted">
+        These services may use cookies and collect data according to their own privacy policies.
+      </p>
+      <h2 class="h5 text-light mt-4">4. Your Consent</h2>
+      <p class="text-muted">
+        By using this site, you consent to the terms outlined in this policy.
+      </p>
+      <p class="text-muted text-center small mt-4">
+      Last updated: March 25, 2025
+      </p>      
+    </div>
+  </div>
+</section>
+
 
       </div>
     </main><div class="container">
