Fix the read more buttons

--- a/bed-bug-knowledge.html
+++ b/bed-bug-knowledge.html
@@ -2,6 +2,7 @@
 <html lang="en-US" data-bs-theme="dark">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Bed Bug Survivors is a trusted resource for identifying, treating, and reporting bed bug infestations. Explore expert-backed product picks, real-world outbreak reports, and survival tips to reclaim your space.">
     <meta charset="utf-8">
     <title>Bed Bug Knowledge - Bed Bug Survivors</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
@@ -98,7 +99,7 @@
         <div class="card-body">
           <h5 class="card-title">What Are Bed Bugs?</h5>
           <p class="card-text">Learn about their appearance, lifecycle, and habits.</p>
-          <a href="what-are-bed-bugs.html" class="btn btn-outline-light w-100">Read More</a>
+          <a href="/bed-bug-knowledge/what-are-bed-bugs.html" class="btn btn-outline-light w-100">Read More</a>
         </div>
       </div>
     </div>
@@ -108,7 +109,7 @@
         <div class="card-body">
           <h5 class="card-title">Bed Bug Photos</h5>
           <p class="card-text">A visual guide to identifying bed bugs at different stages.</p>
-          <a href="bed-bug-photos.html" class="btn btn-outline-light w-100">Read More</a>
+          <a href="/bed-bug-knowledge/bed-bug-photos.html" class="btn btn-outline-light w-100">Read More</a>
         </div>
       </div>
     </div>
@@ -118,7 +119,7 @@
         <div class="card-body">
           <h5 class="card-title">Bed Bug Signs &amp; Bites</h5>
           <p class="card-text">Recognize infestations and distinguish bed bug bites.</p>
-          <a href="signs-of-infestation.html" class="btn btn-outline-light w-100">Read More</a>                      
+          <a href="/bed-bug-knowledge/signs-of-infestation.html" class="btn btn-outline-light w-100">Read More</a>                      
         </div>
       </div>
     </div>
@@ -128,7 +129,7 @@
         <div class="card-body">
           <h5 class="card-title">How Do You Get Them?</h5>
           <p class="card-text">Understand how bed bugs spread and how to prevent them.</p>
-          <a href="how-do-you-get-bed-bugs.html" class="btn btn-outline-light w-100">Read More</a>
+          <a href="/bed-bug-knowledge/how-do-you-get-bed-bugs.html" class="btn btn-outline-light w-100">Read More</a>
         </div>
       </div>
     </div>
@@ -138,7 +139,7 @@
         <div class="card-body">
           <h5 class="card-title">Myths &amp; Facts</h5>
           <p class="card-text">Debunk common misconceptions about bed bugs.</p>
-          <a href="bed-bug-myths-facts.html" class="btn btn-outline-light w-100">Read More</a>       
+          <a href="/bed-bug-knowledge/bed-bug-myths-facts.html" class="btn btn-outline-light w-100">Read More</a>       
         </div>
       </div>
     </div>
