--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en-US" data-bs-theme="dark">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Bed Bug Survivors is a trusted resource for identifying, treating, and reporting bed bug infestations. Explore expert-backed product picks, real-world outbreak reports, and survival tips to reclaim your space.">
     <meta charset="utf-8">
     <title>Bed Bug Survivors | About - Bed Bug Survivors</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
