--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US" data-bs-theme="dark">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Bed Bug Survivors is a trusted resource for identifying, treating, and reporting bed bug infestations. Explore expert-backed product picks, real-world outbreak reports, and survival tips to reclaim your space.">
     <meta charset="utf-8">
     <title>Privacy Policy - Bed Bug Survivors</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
@@ -115,7 +116,7 @@
         By using this site, you consent to the terms outlined in this policy.
       </p>
       <p class="text-muted text-center small mt-4">
-      Last updated: March 29, 2025
+      Last updated: March 30, 2025
       </p>      
     </div>
   </div>
