--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -29,6 +29,8 @@
 
       gtag('config', 'G-282YMNXM2B');
     </script>
+    <!-- Ahrefs -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="93lq20F2tdCBF/f+mhyuNw" async></script>
 
   </head>
 
@@ -116,7 +118,7 @@
         By using this site, you consent to the terms outlined in this policy.
       </p>
       <p class="text-muted text-center small mt-4">
-      Last updated: March 31, 2025
+      Last updated: April 02, 2025
       </p>      
     </div>
   </div>
