Fixing the permalink structure!

--- a/bed-bug-knowledge/bed-bug-photos/index.html
+++ b/bed-bug-knowledge/bed-bug-photos/index.html
@@ -309,7 +309,7 @@
                             What Are Bed Bugs?
                         </a>
                     
-                        <a href="/bed-bug-knowledge/bed-bug-photos" class="list-group-item list-group-item-action active">
+                        <a href="/bed-bug-knowledge/bed-bug-photos" class="list-group-item list-group-item-action ">
                             Bed Bug Photos
                         </a>
                     
