--- a/bed-bug-knowledge/signs-of-infestation/index.html
+++ b/bed-bug-knowledge/signs-of-infestation/index.html
@@ -213,7 +213,7 @@
                             Bed Bug Photos
                         </a>
                     
-                        <a href="/bed-bug-knowledge/signs-of-infestation" class="list-group-item list-group-item-action active">
+                        <a href="/bed-bug-knowledge/signs-of-infestation" class="list-group-item list-group-item-action ">
                             Bed Bug Signs & Bites
                         </a>
                     
