Fix metadata for all pages and posts so it is shorter + unique

--- a/bed-bug-knowledge/how-do-you-get-bed-bugs/index.html
+++ b/bed-bug-knowledge/how-do-you-get-bed-bugs/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" data-bs-theme="dark">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Bed Bug Survivors is a trusted resource for identifying, treating, and reporting bed bug infestations. Explore expert-backed product picks, real-world outbreak reports, and survival tips to reclaim your space.">
+    <meta name="description" content="Learn about the common ways bed bugs spread and how to protect yourself from infestations at home and during travel.">
     <meta charset="utf-8">
     <title>How do you get bed bugs? - Bed Bug Survivors</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
