--- a/bed-bug-knowledge/index.html
+++ b/bed-bug-knowledge/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" data-bs-theme="dark">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Bed Bug Survivors is a trusted resource for identifying, treating, and reporting bed bug infestations. Explore expert-backed product picks, real-world outbreak reports, and survival tips to reclaim your space.">
+    <meta name="description" content="Your hub for evidence-based information on bed bugs — from early signs, prevention tips, and common myths debunked.">
     <meta charset="utf-8">
     <title>Bed Bug Knowledge - Bed Bug Survivors</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
