--- a/bed-bug-knowledge/what-are-bed-bugs/index.html
+++ b/bed-bug-knowledge/what-are-bed-bugs/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" data-bs-theme="dark">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Bed Bug Survivors is a trusted resource for identifying, treating, and reporting bed bug infestations. Explore expert-backed product picks, real-world outbreak reports, and survival tips to reclaim your space.">
+    <meta name="description" content="What exactly are bed bugs? Get a clear, science-backed overview of these pests — their life cycle, behavior, and why they’re so hard to eliminate.">
     <meta charset="utf-8">
     <title>What Are Bed Bugs - Bed Bug Survivors</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
