--- a/product-picks/index.html
+++ b/product-picks/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" data-bs-theme="dark">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Bed Bug Survivors is a trusted resource for identifying, treating, and reporting bed bug infestations. Explore expert-backed product picks, real-world outbreak reports, and survival tips to reclaim your space.">
+    <meta name="description" content="Discover top-rated products for detecting, treating, and preventing bed bug infestations, curated based on expert recommendations and user experiences.">
     <meta charset="utf-8">
     <title>Product Picks - Bed Bug Survivors</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
