FIxing some seo stuff

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -58,7 +58,7 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" href="/bed-bug-knowledge">Bed Bug Knowledge</a>
+            <a class="nav-link" href="/bed-bug-knowledge/">Bed Bug Knowledge</a>
           </li>
           
           <li class="nav-item">
@@ -118,7 +118,7 @@
         By using this site, you consent to the terms outlined in this policy.
       </p>
       <p class="text-muted text-center small mt-4">
-      Last updated: April 02, 2025
+      Last updated: April 09, 2025
       </p>      
     </div>
   </div>
@@ -132,7 +132,7 @@
       © 2025 Bed Bug Survivors. All rights reserved.
       <a href="/privacy-policy/" class="text-muted ms-3">Privacy Policy</a>
       <a href="/contact/" class="text-muted ms-3">Contact</a>
-      <a href="/about" class="text-muted ms-3">About</a>
+      <a href="/about/" class="text-muted ms-3">About</a>
     </p>
     <ul class="list-unstyled d-flex mb-0">
       <li class="ms-3">
