--- a/removal-request/index.html
+++ b/removal-request/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Request the removal of a bed bug report from our public map. Submit a review if you believe a listing is inaccurate or outdated.">
     <meta charset="utf-8">
-    <title>Request Removal of a Report - Bed Bug Survivors</title>
+    <title>Request Removal of a Bed Bug Report - Bed Bug Survivors</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/assets/css/main.css">
@@ -58,7 +58,7 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" href="/bed-bug-knowledge">Bed Bug Knowledge</a>
+            <a class="nav-link" href="/bed-bug-knowledge/">Bed Bug Knowledge</a>
           </li>
           
           <li class="nav-item">
@@ -86,6 +86,7 @@
   <div class="row justify-content-center">
     <div class="col-lg-10">
 
+      <h1>Request Removal of a Bed Bug Report</h1>
       <div class="bg-warning bg-opacity-10 border border-warning p-4 rounded mb-4">
         <h5 class="text-warning fw-bold">Want to request a report removal?</h5>
         <p class="mb-2">
@@ -94,8 +95,7 @@
         <p class="mb-0">
           Submitting a removal request helps ensure the long-term <strong>integrity, fairness, and credibility</strong> of our public reporting map.
         </p>
-      </div>
-
+      </div>      
       <p>
         Please provide as much information as possible about the report in question — including the title, address, and date of the listing, if available.
         Tell us who you are (tenant, building owner, manager, etc.) and why you're requesting the removal.
@@ -121,7 +121,7 @@
       © 2025 Bed Bug Survivors. All rights reserved.
       <a href="/privacy-policy/" class="text-muted ms-3">Privacy Policy</a>
       <a href="/contact/" class="text-muted ms-3">Contact</a>
-      <a href="/about" class="text-muted ms-3">About</a>
+      <a href="/about/" class="text-muted ms-3">About</a>
     </p>
     <ul class="list-unstyled d-flex mb-0">
       <li class="ms-3">
