--- a/report-bed-bugs-map/index.html
+++ b/report-bed-bugs-map/index.html
@@ -58,7 +58,7 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" href="/bed-bug-knowledge">Bed Bug Knowledge</a>
+            <a class="nav-link" href="/bed-bug-knowledge/">Bed Bug Knowledge</a>
           </li>
           
           <li class="nav-item">
@@ -93,7 +93,7 @@
     <!-- Sidebar Column -->
     <div class="col-lg-4 col-md-5 bg-dark text-light d-flex flex-column">
       <div class="p-4 border-bottom border-secondary">
-        <h5 class="text-white">Recent Bed Bug Reports</h5>
+        <h1 class="text-white">Recent Bed Bug Reports</h1>
         <p class="text-muted small">Zoom in on our map to view curated reports specific to your location of interest.</p>
         <div class="my-3">
           <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#reportModal">
@@ -327,7 +327,7 @@
       © 2025 Bed Bug Survivors. All rights reserved.
       <a href="/privacy-policy/" class="text-muted ms-3">Privacy Policy</a>
       <a href="/contact/" class="text-muted ms-3">Contact</a>
-      <a href="/about" class="text-muted ms-3">About</a>
+      <a href="/about/" class="text-muted ms-3">About</a>
     </p>
     <ul class="list-unstyled d-flex mb-0">
       <li class="ms-3">
