--- a/share-your-story/index.html
+++ b/share-your-story/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US" data-bs-theme="dark">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Review our privacy policy to understand how we collect, use, and protect your data when you interact with Bed Bug Survivors.">
+    <meta name="description" content="We believe stories matter. If you’ve dealt with bed bugs — whether you're still fighting or finally free — we invite you to share what it was like.">
     <meta charset="utf-8">
-    <title>Privacy Policy - Bed Bug Survivors</title>
+    <title>Share Your Story - Bed Bug Survivors</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/assets/css/main.css">
@@ -86,44 +86,17 @@
 </div>
 <main class="flex-grow-1">
       <div class="container">
-        <section class="bg-dark text-light py-5">
-
-
+        <section class="py-5">
   <div class="container">
-    <h1 class="display-5 fw-bold mb-4 text-center">Privacy Policy</h1>
-    <p class="lead text-muted text-center mb-5">
-      Your privacy matters. Here's how we collect, use, and protect your data.
+    <h1 class="mb-3">Share Your Bed Bug Success or Horror Stories!</h1>
+    <p class="lead">
+      We believe stories matter. If you’ve dealt with bed bugs — whether you're still fighting or finally free — we invite you to share what it was like. We regularly feature and share stories to our readers.
     </p>
-    <div class="mx-auto" style="max-width: 800px;">
-      <h2 class="h5 text-light">1. What We Collect</h2>
-      <p class="text-muted">
-        We collect anonymous data about how visitors use this site, such as pages viewed,
-        browser type, and referral source. No personal information is collected unless
-        you explicitly provide it (e.g. by emailing us).
-      </p>
-      <h2 class="h5 text-light mt-4">2. Cookies</h2>
-      <p class="text-muted">
-        This site may use cookies to enhance your experience and track usage patterns.
-        These cookies do not store personal data and are used solely for analytics and ad personalization.
-      </p>
-      <h2 class="h5 text-light mt-4">3. Third-Party Services</h2>
-      <p class="text-muted">
-        We use third-party services such as:
-      </p>
-      <ul class="text-muted">
-        <li>Google Analytics – for site usage data</li>
-        <li>Google AdSense – to display relevant ads</li>
-      </ul>
-      <p class="text-muted">
-        These services may use cookies and collect data according to their own privacy policies.
-      </p>
-      <h2 class="h5 text-light mt-4">4. Your Consent</h2>
-      <p class="text-muted">
-        By using this site, you consent to the terms outlined in this policy.
-      </p>
-      <p class="text-muted text-center small mt-4">
-      Last updated: June 16, 2025
-      </p>      
+    <p class="lead">Completely anonymous. We don’t ask for your name, email, or any personal info.</p>
+    <div class="bg-light p-4 rounded shadow">
+      <div class="d-flex justify-content-center">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSecUleUwyFz_pQC4J0fpOG04zfPtKwGnfiZR6f5XFNjH1j7Qg/viewform?embedded=true" width="640" height="605" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      </div>
     </div>
   </div>
 </section>
