Google adsense submission

--- a/index.html
+++ b/index.html
@@ -139,7 +139,6 @@
       <h3 class="pb-4 mb-4 fst-italic border-bottom">
         More bed bug stories
       </h3>
-
   	
   		
 		
@@ -179,8 +178,6 @@
 		
 		<a class="btn btn-outline-light rounded-pill" href="/blog/">See all posts</a>
 	</div>
-
-
    <!--- Sticky sidebar -->	
 	<div class="col-md-4">
 	  <div class="position-sticky" style="top: 2rem;">
@@ -188,27 +185,22 @@
 	      <h3 class="fst-italic">About</h3>
 	      <p class="mb-0">Bed Bug Survivors is a site that shares information and stories about bed bugs. We do our best to analyze and understand current research to share with readers. We also share personal bed bug stories - if you have one, <a href="https://forms.gle/ZYF2ttxiucZQa6xW9" target="_blank">please share it with us!</a></p>
 	    </div>
-
 	    <div class="p-4">
 	      <h3 class="fst-italic">Follow Us</h3>
 	      <ol class="list-unstyled">
 	        <li><a href="https://www.instagram.com/bedbugsurvivors/" target="_blank">Instagram</a></li>
 	      </ol>
 	    </div>
-
-	    <!--- Future Google Ads -->
 	    <div class="p-4 mb-3 rounded">
-	      <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1601020290533153" crossorigin="anonymous"></script>
-					<!-- Vertical Ad -->
-					<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1601020290533153" data-ad-slot="7767241930" data-ad-format="auto" data-full-width-responsive="true"></ins>
-					<script>
-					     (adsbygoogle = window.adsbygoogle || []).push({});
-					</script>
+				<script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1601020290533153" crossorigin="anonymous"></script>
+				<ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-1601020290533153" data-ad-slot="3352909304"></ins>
+				<script>
+				     (adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
 	    </div>
-
 	  </div>
 	</div>
-  </div>
+</div>
 </div>
 
       </div>
